# monologue

./: .gitignore  CONVENTIONS.md  Cargo.toml  LICENSE  README.md  dummy_data.txt  main.py  pyproject.toml  tokenizer.json
inference/src/: lib.rs
rust_tokenizer/: Cargo.toml  run_tests_and_bench.sh
rust_tokenizer/benches/: benchmark.rs
rust_tokenizer/src/: lib.rs  tests.rs
rust_tokenizer/tests/: integration_tests.rs  test_tokenizer.py
scripts/: run.sh
web/src/: App.tsx  worter.ts
