[package]
name = "rust_tokenizer"
version = "0.1.0"
edition = "2024"

# build a shared library that python can use
[lib]
name = "rust_tokenizer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
rayon = "1.10"
dary_heap = "0.3"
compact_str = "0.8"
ahash = "0.8"
fancy-regex = "0.13"
log = "0.4"
pyo3-log = "0.11"
